--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -5,11 +5,7 @@
 {% from "common/sub-header/macro.njk" import subHeader %}
 
 {% block beforeContent %}
-    {{ subHeader(
-    businessName=businessName,
-    sbi=singleBusinessIdentifier,
-    userName=userName
-) }}
+  {{ subHeader(businessName=businessName, sbi=singleBusinessIdentifier, userName=userName) }}
 {% endblock %}
 
 {% block content %}
