--- a/src/views/common/sub-header/macro.njk
+++ b/src/views/common/sub-header/macro.njk
@@ -7,7 +7,7 @@
   </div>
 
   <div class="govuk-grid-column-one-third">
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-1 sub-header-user-name" style="text-align: right;">{{ userName }}</h3>
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-1 sub-header-user-name govuk-text-align-right">{{ userName }}</h3>
   </div>
 
 </div>
