--- a/src/views/business/business-address-check.njk
+++ b/src/views/business/business-address-check.njk
@@ -39,7 +39,7 @@
             {% if address2 %}{{ address2 }}<br>{% endif %}
 
             <!-- Town or city -->
-            {% if addressCity %}{{ addressCity }}<br>{% endif %}
+            {% if city %}{{ city }}<br>{% endif %}
 
             <!-- County -->
             {% if addressCounty %}{{ addressCounty }}<br>{% endif %}
