--- a/src/views/business/business-address-enter.njk
+++ b/src/views/business/business-address-enter.njk
@@ -73,12 +73,12 @@
             text: "Town or city"
           },
           classes: "govuk-!-width-two-thirds",
-          id: "addressCity",
-          name: "addressCity",
-          value: addressCity,
+          id: "city",
+          name: "city",
+          value: city,
           autocomplete: "address-level2",
-          errorMessage: errors.addressCity and {
-            text: errors.addressCity.text
+          errorMessage: errors.city and {
+            text: errors.city.text
           }
         }) }}
 
