--- a/src/views/business/business-address-check.njk
+++ b/src/views/business/business-address-check.njk
@@ -42,7 +42,7 @@
             {% if city %}{{ city }}<br>{% endif %}
 
             <!-- County -->
-            {% if addressCounty %}{{ addressCounty }}<br>{% endif %}
+            {% if county %}{{ county }}<br>{% endif %}
 
             <!-- Postcode -->
             {% if postcode %}{{ postcode }}<br>{% endif %}
