--- a/src/views/business/business-address-enter.njk
+++ b/src/views/business/business-address-enter.njk
@@ -87,11 +87,11 @@
             text: "County (optional)"
           },
           classes: "govuk-!-width-two-thirds",
-          id: "addressCounty",
-          name: "addressCounty",
-          value: addressCounty,
-          errorMessage: errors.addressCounty and {
-            text: errors.addressCounty.text
+          id: "county",
+          name: "county",
+          value: county,
+          errorMessage: errors.county and {
+            text: errors.county.text
           }
         }) }}
 
