--- a/src/views/business/business-address-check.njk
+++ b/src/views/business/business-address-check.njk
@@ -48,7 +48,7 @@
             {% if postcode %}{{ postcode }}<br>{% endif %}
 
             <!-- Country -->
-            {% if addressCountry %}{{ addressCountry }}{% endif %}
+            {% if country %}{{ country }}{% endif %}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="/business-address-enter">Change<span class="govuk-visually-hidden"> business address</span></a>
