--- a/src/views/business/business-address-enter.njk
+++ b/src/views/business/business-address-enter.njk
@@ -114,12 +114,12 @@
             text: "Country"
           },
           classes: "govuk-!-width-two-thirds",
-          id: "addressCountry",
-          name: "addressCountry",
-          value: addressCountry,
+          id: "country",
+          name: "country",
+          value: country,
           autocomplete: "country-name",
-          errorMessage: errors.addressCountry and {
-            text: errors.addressCountry.text
+          errorMessage: errors.country and {
+            text: errors.country.text
           }
         }) }}
       </fieldset>
