--- a/src/views/business/business-address-enter.njk
+++ b/src/views/business/business-address-enter.njk
@@ -7,7 +7,7 @@
 {% from "common/sub-header/macro.njk" import subHeader %}
 
 {% block beforeContent %}
-  {{ subHeader(businessName=businessName, sbi=singleBusinessIdentifier, userName=userName) }}
+  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
 {% endblock %}
 
 
