--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -5,7 +5,7 @@
 {% from "common/sub-header/macro.njk" import subHeader %}
 
 {% block beforeContent %}
-  {{ subHeader(businessName=businessName, sbi=singleBusinessIdentifier, userName=userName) }}
+  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
 {% endblock %}
 
 {% block content %}
@@ -123,7 +123,7 @@
             text: "Single business identifier (SBI)"
           },
           value: {
-            text: singleBusinessIdentifier
+            text: sbi
           }
         },
         {
