--- a/src/views/business/business-name-change.njk
+++ b/src/views/business/business-name-change.njk
@@ -6,39 +6,29 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "What is your business name?" %}
-{% set metaDescription = "Update the name for your business." %}
-
 {% block beforeContent %}
-    {{ subHeader(
-    businessName=businessName, 
-    sbi="123456789", 
-    userName="Alfred Waldron"
-) }}
-
-    {{ appBackLink() }}
+    {{ subHeader(businessName=subHeader.businessName, sbi=subHeader.sbi, userName=subHeader.userName) }}
 {% endblock %}
 
 {% block content %}
+  {{ appBackLink(backLink) }}
+  {% if errors %}
+    {{ govukErrorSummary({
+        titleText: "There is a problem",
+        errorList: {
+            text: errors.businessName.text,
+            href: "#business-name"
+        }
+    }) }}
+  {% endif %}
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    {% if errors %}
-        {{ govukErrorSummary({
-            titleText: "There is a problem",
-            errorList: [
-                {
-                    text: errors.businessName.text,
-                    href: "#business-name"
-                }
-            ]
-        }) }}
-    {% endif %}
-
     <form method="post" novalidate>
       <div class="govuk-form-group">
         {{ govukInput({
           label: {
-            text: "What is your business name?",
+            text: pageTitle,
             classes: "govuk-label--l",
             isPageHeading: true
           },
@@ -52,12 +42,11 @@
       </div>
 
       {{ govukButton({
-        text: "Continue"
+        text: "Continue",
+        preventDoubleClick: true
       }) }}
 
-      <p class="govuk-body">
-        <a href="/business-details" class="govuk-link govuk-link--no-visited-state">Cancel</a>
-      </p>
+      <p class="govuk-body"><a href={{backLink.href}} class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
     </form>
   </div>
 </div>
