--- a/src/views/business/business-name-check.njk
+++ b/src/views/business/business-name-check.njk
@@ -5,26 +5,18 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "Check your business name is correct before submitting" %}
-{% set metaDescription = "Check the name for your business is correct." %}
-
 {% block beforeContent %}
-    {{ subHeader(
-    businessName=businessName, 
-    sbi="123456789", 
-    userName="Alfred Waldron"
-) }}
-
-    {{ appBackLink() }}
+  {{ subHeader(businessName=subHeader.businessName, sbi=subHeader.sbi, userName=subHeader.userName) }}
 {% endblock %}
 
 {% block content %}
+  {{ appBackLink(backLink) }}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form method="post" novalidate>
       <div class="govuk-form-group">
         <h1 class="govuk-heading-l">
-          Check your business name is correct before submitting
+          {{pageTitle}}
         </h1>
 
         {{ govukSummaryList({
@@ -50,13 +42,9 @@
         }) }}
       </div>
 
-      {{ govukButton({
-        text: "Submit"
-      }) }}
+      {{ govukButton({ text: "Submit", preventDoubleClick: true }) }}
 
-      <p class="govuk-body">
-        <a href="/business-details" class="govuk-link govuk-link--no-visited-state">Cancel</a>
-      </p>
+      <p class="govuk-body"><a href={{cancelLink}} class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
     </form>
   </div>
 </div>
