--- a/src/views/business/business-email-change.njk
+++ b/src/views/business/business-email-change.njk
@@ -6,19 +6,11 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "What is your business email address?" %}
-{% set metaDescription = "Update the email address for your business." %}
-
 {% block beforeContent %}
-    {{ subHeader(
-    businessName=businessName, 
-    sbi="123456789", 
-    userName="Alfred Waldron"
-) }}
-
-    {{ appBackLink() }}
+  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
+  {{ appBackLink() }}
 {% endblock %}
-
+   
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -38,7 +30,7 @@
       <div class="govuk-form-group">
         {{ govukInput({
           label: {
-            text: "What is your business email address?",
+            text: pageTitle,
             classes: "govuk-label--l",
             isPageHeading: true
           },
