--- a/src/views/business/business-email-check.njk
+++ b/src/views/business/business-email-check.njk
@@ -5,17 +5,9 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "Check your business email address is correct before submitting" %}
-{% set metaDescription = "Check the email address for your business is correct." %}
-
 {% block beforeContent %}
-    {{ subHeader(
-    businessName=businessName, 
-    sbi="123456789", 
-    userName="Alfred Waldron"
-) }}
-
-    {{ appBackLink() }}
+  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
+  {{ appBackLink() }}
 {% endblock %}
 
 {% block content %}
