--- a/src/views/business/business-address-check.njk
+++ b/src/views/business/business-address-check.njk
@@ -5,64 +5,51 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "Check your business address is correct before submitting" %}
-{% set metaDescription = "Check the address for your business is correct." %}
-
 {% block beforeContent %}
-    {{ subHeader(
-    businessName=businessName,
-    sbi="123456789",
-    userName="Alfred Waldron"
-) }}
-
-    {{ appBackLink() }}
+  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
+  {{ appBackLink(backLink) }}
 {% endblock %}
 
 {% block content %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <form method="post" novalidate>
-      <h1 class="govuk-heading-l">
-        Check your business address is correct before submitting
-      </h1>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <form method="post" novalidate>
+        <h1 class="govuk-heading-l">
+          {{ pageTitle }}
+        </h1>
 
-      <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Business address
-          </dt>
-          <dd class="govuk-summary-list__value">
-            <!-- Address line 1 -->
-            {% if address1 %}{{ address1 }}<br>{% endif %}
+        {% set formattedAddress %}
+          {% for addressLine in address %}
+            <div>{{addressLine}}</div>
+          {% endfor %}
+        {% endset %}
 
-            <!-- Address line 2 -->
-            {% if address2 %}{{ address2 }}<br>{% endif %}
-
-            <!-- Town or city -->
-            {% if city %}{{ city }}<br>{% endif %}
-
-            <!-- County -->
-            {% if county %}{{ county }}<br>{% endif %}
-
-            <!-- Postcode -->
-            {% if postcode %}{{ postcode }}<br>{% endif %}
-
-            <!-- Country -->
-            {% if country %}{{ country }}{% endif %}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="/business-address-enter">Change<span class="govuk-visually-hidden"> business address</span></a>
-          </dd>
-        </div>
-      </dl>
-
-      <div class="govuk-button-group">
-        {{ govukButton({
-          text: "Submit"
+        {{ govukSummaryList({
+          rows: [
+            {
+              key: {
+                text: "Business address"
+              },
+              value: {
+                html: formattedAddress
+              },
+              actions: {
+                items: [
+                  {
+                    href: changeLink,
+                    text: "Change",
+                    visuallyHiddenText: "business address"
+                  }
+                ]
+              }
+            }
+          ]
         }) }}
-      </div>
-      <p class="govuk-body"><a href="/business-details" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
-    </form>
+
+        {{ govukButton({ text: "Submit", preventDoubleClick: true }) }}
+
+        <p class="govuk-body"><a href={{cancelLink}} class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
+      </form>
+    </div>
   </div>
-</div>
 {% endblock %}
