add VAT number to view

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -131,13 +131,13 @@
             text: "VAT registration number"
           },
           value: {
-            html: '<span style="color:#505a5f">No number added</span>'
+            text: vatNumber 
           },
           actions: {
             items: [
               {
                 href: "#",
-                text: "Add",
+                text: "Change",
                 visuallyHiddenText: "VAT registration number"
               }
             ]
