Added more unit tests

--- a/src/views/business/business-phone-numbers-change.njk
+++ b/src/views/business/business-phone-numbers-change.njk
@@ -7,16 +7,8 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "What are your business phone numbers?" %}
-{% set metaDescription = "Update the phone numbers for your business." %}
-
 {% block beforeContent %}
-  {{ subHeader(
-    businessName=businessName, 
-    sbi="123456789", 
-    userName="Alfred Waldron"
-) }}
-
+  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
   {{ appBackLink() }}
 {% endblock %}
 
