--- a/src/views/business/business-phone-numbers-check.njk
+++ b/src/views/business/business-phone-numbers-check.njk
@@ -5,22 +5,9 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "Check your business phone numbers are correct before submitting" %}
-{% set metaDescription = "Check the phone numbers for your business are correct." %}
-
-{% set businessPhoneNumbers %}
-  Telephone: {{ businessTelephone or '<span class="govuk-hint">Not added</span>' }}<br>
-  Mobile: {{ businessMobile or '<span class="govuk-hint">Not added</span>' }}
-{% endset %}
-
 {% block beforeContent %}
-    {{ subHeader(
-    businessName=businessName, 
-    sbi="123456789", 
-    userName="Alfred Waldron"
-) }}
-
-    {{ appBackLink() }}
+  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
+  {{ appBackLink() }}
 {% endblock %}
 
 {% block content %}
