add integration test for change route

--- a/src/views/business/business-name-change.njk
+++ b/src/views/business/business-name-change.njk
@@ -34,7 +34,7 @@
           },
           id: "business-name",
           name: "businessName",
-          value: businessName,
+          value: changeBusinessName or businessName,
           errorMessage: errors.businessName and {
             text: errors.businessName.text
           }
