sfd-13-fetch-data-from-dal (#63)

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -131,16 +131,7 @@
             text: "VAT registration number"
           },
           value: {
-            html: '<span style="color:#505a5f">No number added</span>'
-          },
-          actions: {
-            items: [
-              {
-                href: "#",
-                text: "Add",
-                visuallyHiddenText: "VAT registration number"
-              }
-            ]
+            text: vatNumber 
           }
         },
         {
