--- a/src/views/business/business-legal-status-change.njk
+++ b/src/views/business/business-legal-status-change.njk
@@ -9,12 +9,12 @@
 
 {% block beforeContent %}
   {{ subHeader(
-    businessName=businessName, 
-    sbi="123456789", 
+    businessName=businessName,
+    sbi="123456789",
     userName="Alfred Waldron"
 ) }}
 
-  {{ appBackLink() }}
+{{ appBackLink({ href: '/business-details'}) }}
 {% endblock %}
 
 {% block content %}
