--- a/src/views/business/business-email-change.njk
+++ b/src/views/business/business-email-change.njk
@@ -8,9 +8,9 @@
 
 {% block beforeContent %}
   {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
-  {{ appBackLink() }}
+  {{ appBackLink(backLink)}}
 {% endblock %}
-   
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
