--- a/src/views/business/business-name-check.njk
+++ b/src/views/business/business-name-check.njk
@@ -10,12 +10,12 @@
 
 {% block beforeContent %}
     {{ subHeader(
-    businessName=businessName, 
-    sbi="123456789", 
+    businessName=businessName,
+    sbi="123456789",
     userName="Alfred Waldron"
 ) }}
 
-    {{ appBackLink() }}
+{{ appBackLink({ href: '/business-name-change' }) }}
 {% endblock %}
 
 {% block content %}
