--- a/src/views/cookies.njk
+++ b/src/views/cookies.njk
@@ -5,7 +5,7 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 
 {% block beforeContent %}
-    {{ appBackLink() }}
+{{ appBackLink({ href: '/business-details'}) }}
 {% endblock %}
 
 {% block content %}
