--- a/src/views/business/business-email-change.njk
+++ b/src/views/business/business-email-change.njk
@@ -12,20 +12,20 @@
 {% endblock %}
 
 {% block content %}
+  {% if errors %}
+    {{ govukErrorSummary({
+        titleText: "There is a problem",
+        errorList: [
+          {
+            text: errors.businessEmail.text,
+            href: "#business-email"
+          }
+        ]
+    }) }}
+  {% endif %}
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    {% if errors %}
-        {{ govukErrorSummary({
-            titleText: "There is a problem",
-            errorList: [
-                {
-                    text: errors.businessEmail.text,
-                    href: "#business-email"
-                }
-            ]
-        }) }}
-    {% endif %}
-
     <form method="post" novalidate>
       <div class="govuk-form-group">
         {{ govukInput({
@@ -45,7 +45,8 @@
       </div>
 
       {{ govukButton({
-        text: "Continue"
+        text: "Continue",
+        preventDoubleClick: true
       }) }}
     </form>
   </div>
