Update: Business name change and check views

--- a/src/views/business/business-name-change.njk
+++ b/src/views/business/business-name-change.njk
@@ -8,9 +8,7 @@
 
 {% block beforeContent %}
     {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
-
-
-    {{ appBackLink() }}
+    {{ appBackLink(backLink) }}
 {% endblock %}
 
 {% block content %}
