--- a/src/views/business/business-name-check.njk
+++ b/src/views/business/business-name-check.njk
@@ -5,17 +5,9 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = pageTitle %}
-{% set metaDescription = metaDescription %}
-
 {% block beforeContent %}
-    {{ subHeader(
-    businessName=businessName,
-    sbi=sbi,
-    userName=userName
-) }}
-
-{{ appBackLink({ href: '/business-name-change' }) }}
+  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
+  {{ appBackLink(backLink) }}
 {% endblock %}
 
 {% block content %}
