--- a/src/views/business/business-phone-numbers-check.njk
+++ b/src/views/business/business-phone-numbers-check.njk
@@ -5,22 +5,9 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "Check your business phone numbers are correct before submitting" %}
-{% set metaDescription = "Check the phone numbers for your business are correct." %}
-
-{% set businessPhoneNumbers %}
-  Telephone: {{ businessTelephone or '<span class="govuk-hint">Not added</span>' }}<br>
-  Mobile: {{ businessMobile or '<span class="govuk-hint">Not added</span>' }}
-{% endset %}
-
 {% block beforeContent %}
-    {{ subHeader(
-    businessName=businessName,
-    sbi="123456789",
-    userName="Alfred Waldron"
-) }}
-
-{{ appBackLink({ href: '/business-phone-numbers-change'}) }}
+  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
+  {{ appBackLink(backLink) }}
 {% endblock %}
 
 {% block content %}
@@ -58,13 +45,14 @@
             </p>
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="/business-phone-numbers-change">Change<span class="govuk-visually-hidden">business phone numbers</span></a>
+            <a class="govuk-link" href={{changeLink}}>Change<span class="govuk-visually-hidden">business phone numbers</span></a>
           </dd>
         </div>
       </dl>
 
         {{ govukButton({
-          text: "Submit"
+          text: "Submit",
+          preventDoubleClick: true
         }) }}
     </form>
   </div>
