--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -3,6 +3,7 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -15,7 +16,6 @@
         }) }}
       {% endif %}
 
-    <span class="govuk-caption-l">{{userName=userName}}</span>
     
     <h1 class="govuk-heading-l">
       View and update your personal details
@@ -41,7 +41,7 @@
             text: "Full name"
           },
           value: {
-            text: userName
+            text: fullName
           },
           actions: {
             items: [
