--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -152,10 +152,10 @@
         },
         {
           key: {
-            text: "County Parish Holding (CPH) number"
+            text: "County Parish Holding (CPH) numbers"
           },
           value: {
-            text: countyParishHoldingNumber
+            html: countyParishHoldingNumbers
           }
         }
       ]
