--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -3,7 +3,7 @@
 {% block content %}
   {{ appHeading({
     text: heading,
-    caption: "Core delivery platform Node.js Frontend Template."
+    caption: "Single business identifier (SBI): "
   }) }}
 
   <div class="govuk-grid-row">
