--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -36,7 +36,7 @@
 
     {% set formattedCph %}
       {% for cph.cphNumber in countyParishHoldingNumbers %}
-        <div>{{ph.cphNumber}}</div>
+        <div>{{cph.cphNumber}}</div>
       {% endfor %}
     {% endset %}
 
