--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -35,8 +35,8 @@
     {% endset %}
 
     {% set formattedCph %}
-      {% for cph.cphNumber in countyParishHoldingNumbers %}
-        <div>{{cph.cphNumber}}</div>
+      {% for cphNumber in countyParishHoldings %}
+        {{cphNumber}} <br>
       {% endfor %}
     {% endset %}
 
