--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -9,6 +9,79 @@
         You have signed in
       </h1>
 
+          {{ govukSummaryList({
+      rows: [
+        {
+          key: {
+            text: "Business name"
+          },
+          value: {
+            text: businessName
+          },
+          actions: {
+            items: [
+              {
+                href: "/business-name-change",
+                text: "Change",
+                visuallyHiddenText: "business name"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "Business address"
+          },
+          value: {
+            html: formattedAddress
+          },
+          actions: {
+            items: [
+              {
+                href: "/business-address-enter",
+                text: "Change",
+                visuallyHiddenText: "business address"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "Business phone numbers"
+          },
+          value: {
+            html: displayBusinessPhone
+          },
+          actions: {
+            items: [
+              {
+                href: "/business-phone-numbers-change",
+                text: "Change",
+                visuallyHiddenText: "business phone numbers"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "Business email address"
+          },
+          value: {
+            text: businessEmail
+          },
+          actions: {
+            items: [
+              {
+                href: "/business-email-change",
+                text: "Change",
+                visuallyHiddenText: "business email address"
+              }
+            ]
+          }
+        }
+      ]
+    }) }}
+
       <span class="govuk-caption-m">{{ auth.organisationId }}</span>
       <h2 class="govuk-heading-m">Your session details</h2>
 
