--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -3,6 +3,7 @@
 
 {% block beforeContent %}
   {{ appBackLink(backLink)}}
+  <a href="#" class="govuk-link login-nav__link govuk-grid-column-one-third">Sign out</a>
 {% endblock %}
 
 {% block content %}
