--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -46,12 +46,8 @@
           text: "Cookies"
         },
         {
-          href: "https://www.gov.uk/help/accessibility-statement",
-          text: "Accessibility statement",
-          attributes: {
-            target: "_blank",
-            rel: "noopener noreferrer"
-          }
+          href: "/accessibility-statement",
+          text: "Accessibility statement"
         },
         {
           href: "https://www.gov.uk/government/organisations/rural-payments-agency/about/personal-information-charter",
