--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -8,6 +8,14 @@
         <span class="govuk-caption-l">{{ auth.name }}</span>
         You have signed in
       </h1>
+      <h3 class="govuk-heading-m"> Business details</h3>
+      <p>
+        <a href="/business-details">View and update your business details</a>
+      </p>
+      <h3 class="govuk-heading-m"> Personal details</h3>
+      <p>
+        <a href="/personal-details">View and update your personal details</a>
+      </p>
 
       <span class="govuk-caption-m">{{ auth.organisationId }}</span>
       <h2 class="govuk-heading-m">Your session details</h2>
