--- a/src/views/cookies.njk
+++ b/src/views/cookies.njk
@@ -51,7 +51,7 @@
               text: "Used to store page information"
             },
             {
-              text: "As soon as you close your browser"
+              text: "When you close your browser"
             }
           ]
         ]
