--- a/src/views/cookies.njk
+++ b/src/views/cookies.njk
@@ -45,7 +45,7 @@
         rows: [
           [
             {
-              text: "session"
+              text: "Session"
             },
             {
               text: "Used to store page information"
