--- a/src/views/cookies.njk
+++ b/src/views/cookies.njk
@@ -102,7 +102,7 @@
       </p>
       <ul class="govuk-list govuk-list--bullet">
         <li>how you got to the service</li>
-        <li>the pages you visit and how long you spend on each page</li>
+        <li>the pages you visit here and how long you spend on them</li>
         <li>what you click on while you're using the service</li>
       </ul>
 
