--- a/src/views/cookies.njk
+++ b/src/views/cookies.njk
@@ -125,7 +125,7 @@
               text: "_ga"
             },
             {
-              text: "Helps us count how many people visit our service by checking if you've visited before"
+              text: "Checks if you’ve visited the service before. This helps us count how many people visit our site."
             },
             {
               text: "2 years"
@@ -147,7 +147,7 @@
               text: "_gid"
             },
             {
-              text: "Helps us identify unique users, the referring sites that brought them to the service, and track and count sessions and visitors"
+              text: "Used to identify unique users and inform referring sites, visitor and session counts."
             },
             {
               text: "24 hours"
