Fixed display and unit test issues

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -35,7 +35,7 @@
     {% endset %}
 
     {% set formattedCph %}
-      {% for cphNumber in countyParishHoldings %}
+      {% for cphNumber in countyParishHoldingNumbers %}
         {{cphNumber}} <br>
       {% endfor %}
     {% endset %}
