--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -36,7 +36,7 @@
 
     {% set formattedCph %}
       {% for cphNumber in countyParishHoldingNumbers %}
-        {{cphNumber}} <br>
+       <div> {{cphNumber}} </div>
       {% endfor %}
     {% endset %}
 
