--- a/src/views/footer/accessibility-statement.njk
+++ b/src/views/footer/accessibility-statement.njk
@@ -2,7 +2,7 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 
 {% block beforeContent %}
-{{ appBackLink({ href: backLink '}) }}
+{{ appBackLink({ href: backLink }) }}
 {% endblock %}
 
 {% block content %}
