Backlink accessibility statement (#87)
https://eaflood.atlassian.net/browse/SFD-75

--- a/src/views/footer/accessibility-statement.njk
+++ b/src/views/footer/accessibility-statement.njk
@@ -2,7 +2,7 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 
 {% block beforeContent %}
-{{ appBackLink({ href: '/business-details'}) }}
+{{ appBackLink({ href: backLink }) }}
 {% endblock %}
 
 {% block content %}
