--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -5,7 +5,7 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 
 {% block beforeContent %}
-  {{ appBackLink(backLink) }}
+  {{ appBackLink({ href: backLink }) }}
 {% endblock %}
 
 {% block content %}
