--- a/src/views/business/business-name-change.njk
+++ b/src/views/business/business-name-change.njk
@@ -3,12 +3,12 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
-{% from "common/navigation/back-link.njk" import appBackLink %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
 {% block beforeContent %}
     {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
-    {{ appBackLink(backLink) }}
+    {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
 {% block content %}
