--- a/src/views/cookies.njk
+++ b/src/views/cookies.njk
@@ -1,13 +1,13 @@
 
 {% extends 'common/layout.njk' %}
 
-{% from "common/navigation/back-link.njk" import appBackLink %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block beforeContent %}
-  {{ appBackLink({ href: '/business-details'}) }}
+  {{ appBackSignOutLink({ href: '/business-details'}) }}
 {% endblock %}
 
 {% block content %}
