--- a/src/views/footer/accessibility-statement.njk
+++ b/src/views/footer/accessibility-statement.njk
@@ -1,8 +1,8 @@
 {% extends 'common/layout.njk' %}
-{% from "common/navigation/back-link.njk" import appBackLink %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink %}
 
 {% block beforeContent %}
-{{ appBackLink({ href: backLink }) }}
+{{ appBackSignOutLink({ href: backLink }) }}
 {% endblock %}
 
 {% block content %}
