back and signout added to business details

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -3,6 +3,11 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 {% from "common/sub-header/macro.njk" import subHeader %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink %}
+
+{% block beforeContent %}
+  {{ appBackSignOutLink(backLink) }}
+{% endblock %}
 
 {% block beforeContent %}
   {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
