Address PR feedback and fix test setup

--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -67,5 +67,5 @@
 {% endblock %}
 
 {% block bodyEnd %}
-  <script type="module" src="{{ getAssetPath('application.js') }}"></script>
+  <script type="module" once="{{ nonce }} src="{{ getAssetPath('application.js') }}"></script>
 {% endblock %}
