--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -44,8 +44,8 @@
     {% endset %}
 
     {% set displayBusinessPhone %}
-      <div>Telephone: <div class="govuk-hint" style="display: inline;">{{businessTelephone}}</div></div>
-      <div>Mobile: <div class="govuk-hint" style="display: inline;">{{businessMobile}}</div></div>
+      <div>Telephone: <div class="govuk-hint display-inline">{{businessTelephone}}</div></div>
+      <div>Mobile: <div class="govuk-hint display-inline">{{businessMobile}}</div></div>
     {% endset %}
 
     {{ govukSummaryList({
