--- a/src/views/business/business-address-enter.njk
+++ b/src/views/business/business-address-enter.njk
@@ -23,6 +23,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form method="post" novalidate>
+      <input type="hidden" name="crumb" value="{{ crumb }}">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">
