--- a/src/views/business/business-address-check.njk
+++ b/src/views/business/business-address-check.njk
@@ -14,6 +14,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form method="post" novalidate>
+        <input type="hidden" name="crumb" value="{{ crumb }}">
         <h1 class="govuk-heading-l">
           {{ pageTitle }}
         </h1>
