--- a/src/views/business/business-name-change.njk
+++ b/src/views/business/business-name-change.njk
@@ -25,6 +25,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form method="post" novalidate>
+      <input type="hidden" name="crumb" value="{{ crumb }}">
       <div class="govuk-form-group">
         {{ govukInput({
           label: {
