--- a/src/views/business/business-name-check.njk
+++ b/src/views/business/business-name-check.njk
@@ -14,6 +14,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form method="post" novalidate>
+      <input type="hidden" name="crumb" value="{{ crumb }}">
       <div class="govuk-form-group">
         <h1 class="govuk-heading-l">
           {{ pageTitle }}
