--- a/src/views/cookies.njk
+++ b/src/views/cookies.njk
@@ -59,7 +59,7 @@
 
       <h2 class="govuk-heading-m">Cookie banner cookies</h2>
       <p class="govuk-body">
-        You may see a message at the top of your screen when you first visit the service asking you to accept or reject analytics cookies. A cookie is stored so that your computer knows you've seen it and knows not to show it again.
+        You may see a message at the top of your screen when you first visit the service asking you to accept or reject analytics cookies. A cookie is stored so that your computer knows you've seen it and not to show it to you again.
       </p>
 
       {{ govukTable({
